# TerminalAgent

./: CHANGELOG.md  README.md  pyproject.toml  run_terminal.py
.windsurf/rules/: agentic-browser.md  code-of-ethics.md  python-style.md  security.md  testing.md
.windsurf/skills/agentic-browser/: SKILL.md
docs/: AGENTIC_BROWSER_EXECUTION_TASKS.md  AGENTIC_BROWSER_PROJECT_BIBLE.md  CHROMIUM_INTEGRATION.md  TRUST_DECISION_MATRIX.md
examples/: workflow_extract.py  workflow_login.py
kernel/: __init__.py  audit.py  capabilities.py  objects.py  runtime.py  sessions.py  transactions.py  version.py
kernel/renderer/: __init__.py  mock.py
kernel/ui/: __init__.py  terminal.py
tests/: __init__.py  test_adversarial.py  test_audit.py  test_capabilities.py  test_cdp_compatibility.py  test_chaos.py  test_objects.py  test_pii_protection.py  test_renderer.py  test_runtime.py  test_sessions.py  test_transactions.py  test_ui.py  test_versioning.py
tests/benchmarks/: __init__.py  test_snapshot_perf.py
tests/fixtures/cdp/: __init__.py  messages.py  schemas.py
