[project]
name = "agentic-browser-kernel"
version = "0.1.0"
description = "Capability-secure browser kernel for LLM code generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
